sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:15: error: ')' expected but integer literal found.
  for(i <- 0 to l-ecart_-1){
                         ^AlgCombSort:25: error: illegal start of simple expression
} 
^